waits only for a certain amount of time as a client

--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.javaonlineproject/com.example.javaonlineproject.HelloApplication
+                            <mainClass>com.example.javaonlineproject/com.example.javaonlineproject.TicTacToe
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
